--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Evan Curtin
+name: Evan thinks about stuff
 
 # Short bio or description (displayed in the header)
-description: Computational Chemistry PhD Student
+description: Making easy questions hard to answer, then solving them. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
