--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Evan thinks about stuff
+name: Scientific Scripting Smatterer
 
 # Short bio or description (displayed in the header)
-description: Making easy questions hard to answer, then solving them. 
+description: Overanalyzing simple questions since 2016
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
