--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Scientific Scripting Smatterer
 description: Overanalyzing simple questions since 2016
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/ecurtin2/ecurtin2.github.io/blob/master/images/PhillySports.png
 
 #
 # Flags below are optional
