--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Scientific Scripting Smatterer
 description: Overanalyzing simple questions since 2016
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/PhillySports.png
+avatar: /images/PhillySports.png
 
 #
 # Flags below are optional
