--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Scientific Scripting Smatterer
+name: Evan's Blog
 
 # Short bio or description (displayed in the header)
 description: Overanalyzing simple questions since 2016
